[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-env"
version = "1.0.0"
description = "Customer Support Inbox Automation - OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
